reverted previous change and added fix for overlap

DCO signoff

--- a/assets/scss/brigade-app.scss
+++ b/assets/scss/brigade-app.scss
@@ -524,7 +524,7 @@ svg {
 
 #kubernetes {
   position: absolute;
-  left: 17vw;
+  left: 10vw;
   right: 5vw;
   width: 95vw;
   height: 500px;
@@ -543,7 +543,7 @@ svg {
 
 #community {
   position: absolute;
-  left: 12vw;
+  left: 17vw;
   right: 10vw;
   top: 200vh;
   width: 90vw;
